2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/clean.mk,
	  device/lib/s08-stack-auto,
	  support/regression/ports/s08-stack-auto:
	  Infrastructure for testing s08 port with --stack-auto.

2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* aclocal.m4,
	  configure,
	  configure.ac,
	  sdccconf_in.h:
	  Update configure-time host C compiler checks for currently used standard.

2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Document change in -MMD vs. -MF argument.
	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version to prepare for 4.3.0 release.

2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mos6502/peeph.def,
	  support/regression/tests/bug-3593.c:
	  Fix bug #3593, using a variant of a patch by Christopher Williams.

2023-05-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/pic14/Makefile.in,
	  device/lib/pic14/aclocal.m4,
	  device/lib/pic14/configure,
	  device/lib/pic14/configure.ac,
	  device/lib/pic14/libc/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.in,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic14/configure.ac,
	  device/non-free/lib/pic16/Makefile.in,
	  device/non-free/lib/pic16/aclocal.m4,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/configure.ac,
	  device/non-free/lib/pic16/libdev/Makefile.in: