@@ -249,15 +249,9 @@ _hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
 
 /* Indicate which extended bit operations this port supports */
 static bool
-hasExtBitOp (int op, int size)
+hasExtBitOp (int op, sym_link *left, int right)
 {
-  if (op == RRC
-    || op == RLC
-    || op == GETABIT
-    )
-    return TRUE;
-  else
-    return FALSE;
+  return (op == RRC || op == RLC || op == GETABIT);
 }
 
 /* Indicate the expense of an access to an output storage class */
